@@ -1410,3 +1410,5 @@ R   [uuk]: improved world serialization API
 [uuk]: implemented new noise manager method: GeoNoiseManager
 [uuk]: improved speed of debug world generators
 [uuk]: done some work to make blocks work in non-active dimensions
+[uuk]: improved overall API
+[uuk]: made world generation modes serialize-able to data files
