@@ -53,12 +53,16 @@ changelog of snapshot [next], released on -, targeting -
     World Generation:
         - noises are now better selected
         - general faster
+        - modes can now be serialized to files
 
     Rendering:
         - improved general API
         - refactored some stuff
         - improved client/server separation
         - improved some rendering parts
+
+    Resources:
+        - implemented helper code for resource groups
 
 
 changelog of snapshot 20w51a, released on 18.12.2020, targeting 20w51a
